fixed spacing

--- a/style.css
+++ b/style.css
@@ -179,7 +179,7 @@ select:hover {
 #nav a {
     text-decoration: none;
     color: var(--dark);
-    margin: 0 0 0 1em;
+    margin: 0 0 0 2em;
     cursor: pointer;
 }
 
